Added xss protection and other bugfixes

--- a/views/friendsList.handlebars
+++ b/views/friendsList.handlebars
@@ -1,11 +1,15 @@
-<!-- Show list of friends -->
-<h2>List of friends:</h2>
-{{#if friends}}
-<ul>
-{{#each friends}}
-<li>{{this}}</li>
-{{/each}}
+{{#if loggedIn}}
+    <h2>List of friends:</h2>
+    {{#if friends}}
+        <ul>
+        {{#each friends}}
+            <li>{{this}}</li>
+        {{/each}}
+    {{else}}
+        <p>You currently have no friends</p>
+    {{/if}}
+    </ul>
 {{else}}
-<p>You currently have no friends</p>
+    <p>You must be logged in to view friends</p>
+    <button class="homeButton" onclick="location.href='/login';" type="submit">Login</button>
 {{/if}}
-</ul>
