--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -75,6 +75,11 @@ p {
   line-height: 2;
 }
 
+.friend-request-sent {
+  text-align: center;
+  position: relative;
+}
+
 .post {
   width: 75%;
   border-bottom: 1px dashed #333;
